Fix hidden overflow

--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ a {
 }
 
 .spaceBounce {
-  max-height: 1000px;
+  max-height: 800px;
   overflow: hidden;
 }
 
